--- a/public/services.html
+++ b/public/services.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="service-container">
-         <a href="https://car-price-prediction-plum.vercel.app/">
+         <a href="http://127.0.0.1:5000/">
             <img src="../assets/carlogo.png" alt="car icon">
          </a>
          <p>Car Price <br> Prediction</p>
